# 308-OCCRA-2025-Vision

./: .gitignore  package-lock.json  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.svelte  Calibration.svelte  Cameras.svelte  Dashboard.svelte  app.css  main.ts
src/: cube_detector.py
src/client/: package-lock.json  package.json  vite.config.ts
src/client/src/: App.svelte  app.css
src/cube_detector/: __init__.py  __main__.py  camera.py  main.py  server.py  start.py
src/cube_detector/static/: index.html
src/cube_detector/static/css/: style.css
src/dashboard/: package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
src/dashboard/src/: App.svelte  Calibration.svelte  Cameras.svelte  app.css
src/static/: index.html  indext.html
src/static/css/: style.css
