[project]
name = "cube-detector"
version = "0.1.0"
description = "308 Monsters’ coprocessor vision code for the 2025 OCCRA season."
authors = [{ name = "308 Monsters" }]
requires-python = ">=3.13"
dependencies = ["opencv-python (>=4.12.0.88,<5.0.0.0)"]

[project.scripts]
cube-detector = "cube_detector:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
